# bgos

./: Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
src/: global_descriptor_table.rs  interrupts.rs  lib.rs  main.rs  qemu.rs  test.rs  vga.rs
src/output/: serial.rs  vga.rs
src/test/: assert.rs  panic_handler.rs  test_runner.rs  units.rs
src/test/units/: test_println.rs
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
