# See https://doc.rust-lang.org/cargo/reference/manifest.html.

[package]
name = "bgos"
version = "0.0.0-alpha"
authors = [
  "Aleks Todorov (Алекс Тодоров) <aleks.todorov.1337@gmail.com>",
  "Mihye Jeong (정미혜) <olivegreentea@naver.com>",
  "President of Bulgaria <priemna@president.bg>",
  ]
edition = "2021"

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"
