# See https://doc.rust-lang.org/cargo/reference/manifest.html.

[package]
name = "bgos"
version = "0.0.0-alpha"
authors = [
  "Aleks Todorov (Алекс Тодоров) <aleks.todorov.1337@gmail.com>",
  "Mihye Jeong (정미혜) <olivegreentea@naver.com>",
  "President of Bulgaria <priemna@president.bg>",
  ]
edition = "2021"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xF4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 30 # (seconds)

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
